@@ -59,6 +59,8 @@ Helpers:
 
 *gpsdecode* [OPTIONS]
 
+*gpsdebuginfo*
+
 *gpsfake* [OPTIONS]
 
 *gpsinit* [OPTIONS]
@@ -103,6 +105,7 @@ The *gpsd* helpers can be used for administration of *gpsd* systems.
 *gpscat*::  dump the output from a GPS
 *gpsctl*::  control the modes of a GNSS receiver
 *gpsdctl*::  tool for sending commands to gpsd over its control socket
+*gpsdebuginfo*:: Generate a gpsd debug dump of your host.
 *gpsfake*::  test harness for gpsd, simulating a GNSS receiver
 *gpsinit*::  initialize CAN kernel modules for GPSD
 *ntploggps*::  log gpsd data
@@ -184,7 +187,7 @@ The *gpsd* clients return simple success or failure codes:
 
 == SEE ALSO
 
-*gegps*(1), *gpsctl*(1), gpsprof*(1), *gpsfake*(1),
+*gegps*(1), *gpsctl*(1), *gpsdebuginfo*(1), gpsprof*(1), *gpsfake*(1),
 *gpscat*(1), *gpspipe*(1), *gpsmon*(1), xgps*(1). *xgpsspeed*(1)
 
 *libgps*(3), *libgpsmm*(3)
